syntax = "proto3";

package ai.stigmer.commons.apiresource;

import "google/protobuf/timestamp.proto";

// ApiResourceAuditStatus contains system-managed audit information for a resource.
message ApiResourceAuditStatus {
  // Audit information tracking creation and modification.
  ApiResourceAudit audit = 99;
}

// ApiResourceAudit contains both spec-level and status-level audit details.
message ApiResourceAudit {
  // Audit info for the resource's specification (desired state).
  ApiResourceAuditInfo spec_audit = 1;

  // Audit info for the resource's status (actual state).
  ApiResourceAuditInfo status_audit = 2;
}

// ApiResourceAuditInfo contains detailed audit information.
message ApiResourceAuditInfo {
  // Actor who created this resource.
  ApiResourceAuditActor created_by = 1;

  // Timestamp when the resource was created.
  google.protobuf.Timestamp created_at = 2;

  // Actor who last updated this resource.
  ApiResourceAuditActor updated_by = 3;

  // Timestamp when the resource was last updated.
  google.protobuf.Timestamp updated_at = 4;

  // Type of the last event (e.g., "created", "updated").
  string event = 5;
}

// ApiResourceAuditActor represents the entity that performed an action.
message ApiResourceAuditActor {
  // Unique identifier of the actor.
  string id = 1;

  // URL to the actor's avatar image.
  string avatar = 2;
}
